Bolt/Tests/Files/SideEffectsUnitTest.inc
<?php

Deprecated::warn();
trigger_error();
// @codingStandardsIgnoreLine
zzzzzz();
zzzzzz(); // error
zzzzzz(); // not error because error was already found

function zzzzzz() {}
